[gd_scene load_steps=4 format=3 uid="uid://bnd757sqh5p0c"]

[ext_resource type="Script" path="res://Scenes/UserInterface/Lobby/ProductOffer/ProductOffer.gd" id="1_bhxus"]
[ext_resource type="Texture2D" uid="uid://c0mysim7ekqql" path="res://Scenes/UserInterface/Lobby/ProductOffer/Arrow.png" id="3_culfu"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hrod0"]
blend_mode = 2

[node name="Control" type="Control"]
custom_minimum_size = Vector2(112, 42)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.5, 1.5)
script = ExtResource("1_bhxus")

[node name="ProductItem" parent="."]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 68.0
offset_right = 68.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 30.667
offset_right = 77.667
offset_bottom = 47.0
texture = ExtResource("3_culfu")

[node name="PriceItem" parent="."]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="CountOfOperations" type="Label" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = -0.666667
offset_right = 73.0
offset_bottom = 22.3333
theme_override_font_sizes/font_size = 12
text = "0"

[node name="ConfirmOfferButton" type="Button" parent="."]
material = SubResource("CanvasItemMaterial_hrod0")
layout_mode = 0
offset_top = -0.666667
offset_right = 113.0
offset_bottom = 42.3333

[connection signal="pressed" from="ConfirmOfferButton" to="." method="_on_confirm_offer_button_pressed"]
